# mathphd-plus-plus

./: .gitignore  CONTRIBUTING.md  HUGGINGFACE_MODEL_CARD.md  LICENSE  MathPhD++_Blueprint.md  README.md  pyproject.toml  requirements.txt  research.prompt.md
mathphd_plus_plus/: __init__.py
mathphd_plus_plus/configs/: base_config.py
mathphd_plus_plus/data/: collator.py  curriculum.py  download.py  preprocess_cpt.py  preprocess_grpo.py  preprocess_prm.py  preprocess_sft.py
mathphd_plus_plus/evaluation/: evaluate.py  metrics.py
mathphd_plus_plus/inference/: conjecture_generator.py  mcts.py  multi_agent_debate.py  pipeline.py  self_consistency.py  tree_of_thoughts.py
mathphd_plus_plus/models/: base_model.py  multi_objective_loss.py  reward_model.py
mathphd_plus_plus/notebooks/: MathPhD_T4_Training.ipynb  mathphd_plus_plus.ipynb
mathphd_plus_plus/rewards/: code_executor.py  composite_reward.py  process_reward.py  sympy_verifier.py
mathphd_plus_plus/training/: callbacks.py  cpt_trainer.py  grpo_trainer.py  prm_trainer.py  sft_trainer.py
